# binder_design

./: .gitignore  pyproject.toml
binder_design/: __init__.py  check_sampler.ipynb  description.md  fdf.csv  modal_colabfold.py  modal_evoprotgrad.py  modal_pepmlm.py  run_fold.ipynb  sampler.py  submission.fasta  utils.py
